finished simon board draft

--- a/app/game-board.html
+++ b/app/game-board.html
@@ -1,4 +1,8 @@
 <div class="background">
-    <div class="gameboard" id="circle">
+    <div class="gameboard" id="circle"> 
+        <div id="simon-button-top-left"></div>
+        <div id="simon-button-top-right"></div>
+        <div id="simon-button-bottom-left"></div>
+        <div id="simon-button-bottom-right"></div>
     </div>
 </div>
